Correcciones navbar, codigo reformateado