@@ -1,20 +1,17 @@
 package domain.controllers;
+
 import com.twilio.exception.ApiException;
 import domain.models.entities.entidadesGenerales.caracteristicas.CaracteristicaGeneral;
 import domain.models.entities.entidadesGenerales.usuarios.BuilderUsuario;
 import domain.models.entities.entidadesGenerales.usuarios.Usuario;
 import domain.models.entities.enums.DescripcionPermiso;
 import domain.models.entities.enums.Permiso;
-import domain.models.entities.utils.PermisosDeAdmin;
-import domain.models.entities.validaciones.validacionesContrasenias.ValidadorDeContrasenia;
 import domain.models.modulos.resizer.NivelCalidad;
 import domain.models.modulos.resizer.Resizer;
 import domain.models.modulos.resizer.TamanioImagen;
 import domain.models.repositories.RepositorioUsuarios;
 
 import java.util.*;
-import java.util.logging.Level;
-import java.util.logging.Logger;
 
 import spark.ModelAndView;
 import spark.Request;
@@ -26,26 +23,27 @@ public class UsuarioController {
     private static RepositorioUsuarios repositorio;
 
     private UsuarioController() {
-        this.repositorio = new RepositorioUsuarios();
+        repositorio = new RepositorioUsuarios();
     }
 
-    public static UsuarioController getInstancia(){
-        if (instancia == null){
+    public static UsuarioController getInstancia() {
+        if (instancia == null) {
             instancia = new UsuarioController();
         }
         return instancia;
     }
 
     public void agregarUsuario(Usuario.UsuarioDTO dto) {
-        Usuario usuario = new Usuario(dto.getUsuario(), dto.getHashedPasswordActual(),dto.getSaltActual());
+        Usuario usuario = new Usuario(dto.getUsuario(), dto.getHashedPasswordActual(), dto.getSaltActual());
         this.validarUsuario(usuario.getUsuario());
         repositorio.agregar(usuario);
     }
+
     public void agregarAdmin(Usuario adminGenerador, Usuario.UsuarioDTO dto) throws Exception {
         if (!adminGenerador.tienePermisoPara(Permiso.USUARIO_ADMIN))
             throw new Exception("El usuario no puede generar admin");
 
-        Usuario admin = new Usuario(dto.getUsuario(), dto.getHashedPasswordActual(),dto.getSaltActual());
+        Usuario admin = new Usuario(dto.getUsuario(), dto.getHashedPasswordActual(), dto.getSaltActual());
         this.validarUsuario(admin.getUsuario());
         admin.setPermiso(Permiso.USUARIO_ADMIN);
         repositorio.agregar(admin);
@@ -59,7 +57,6 @@ public class UsuarioController {
         CaracteristicaController.getInstancia().agregar(dto);
     }
 
-
     public void modificarTamanioEstandarImagen(Usuario usuario, Resizer resizer, TamanioImagen tamanio) throws Exception {
         if (!usuario.tienePermisoPara(Permiso.USUARIO_ADMIN))
             throw new Exception("El usuario no puede modificar el tamaño estandar de la imagen");
@@ -72,22 +69,22 @@ public class UsuarioController {
         resizer.setCalidad(calidad);
     }
 
-
     //-----------------------------------METODOS BASE-----------------------------------------
 
-
-    public List<Usuario> listarTodos(){
-        return this.repositorio.buscarTodos();
+    public List<Usuario> listarTodos() {
+        return repositorio.buscarTodos();
     }
 
-    public Usuario buscarUsuarioPorID(Integer id){
-        return this.repositorio.buscar(id);
+    public Usuario buscarUsuarioPorID(Integer id) {
+        return repositorio.buscar(id);
     }
 
-    public Usuario buscarUsuarioPorNombre(String usuario) {return this.repositorio.buscarPorNombreDeUsuario(usuario);}
+    public Usuario buscarUsuarioPorNombre(String usuario) {
+        return repositorio.buscarPorNombreDeUsuario(usuario);
+    }
 
     public void validarUsuario(String usuario) {
-        if(usuario== null) {
+        if (usuario == null) {
             throw new ApiException("Debe ingresar un usuario");
         }
     }
@@ -103,7 +100,7 @@ public class UsuarioController {
 
     public void modificar(Integer id, Usuario.UsuarioDTO dto) {
         //TODO
-        Usuario usuario = new Usuario(dto.getUsuario(), dto.getHashedPasswordActual(),dto.getSaltActual());
+        Usuario usuario = new Usuario(dto.getUsuario(), dto.getHashedPasswordActual(), dto.getSaltActual());
         usuario.setIntentosFallidos(dto.getIntentosFallidos());
         usuario.setPermiso(dto.getPermiso());
         usuario.setId(id);
@@ -114,34 +111,32 @@ public class UsuarioController {
         //TODO
     }
 
-    public ModelAndView registrarUsuario(Request request, Response response){
+    public ModelAndView registrarUsuario(Request request, Response response) {
         Map<String, Object> parametros = new HashMap<>();
         Utilidades.asignarUsuarioSiEstaLogueado(request, parametros);
-        return new ModelAndView(parametros,"registrarUsuario.hbs");
+        return new ModelAndView(parametros, "registrarUsuario.hbs");
     }
 
-    public Response registrar(Request request, Response response){
-        try{
+    public Response registrar(Request request, Response response) {
+        try {
             String nombreDeUsuario = request.queryParams("nombreDeUsuario");
-            String contrasenia= request.queryParams("contrasenia");
+            String contrasenia = request.queryParams("contrasenia");
 
             validarUsuario(nombreDeUsuario);
             BuilderUsuario builderUsuario = new BuilderUsuario();
             builderUsuario.setUsername(nombreDeUsuario);
             builderUsuario.setPassword(contrasenia);
 
-            Usuario usuario = builderUsuario.crearUsuario();;
+            Usuario usuario = builderUsuario.crearUsuario();
 
             this.agregarUsuario(usuario.toDTO());
             response.redirect("/");
-        }
-        catch (Exception e){
+        } catch (Exception e) {
             //todo cambiar a pantalla de error
             System.out.println("Error al registrar usuario: " + e);
 
             response.redirect("/");
-        }
-        finally {
+        } finally {
             return response;
         }
     }
@@ -154,46 +149,47 @@ public class UsuarioController {
 //        }
 //    }
 
-    public Boolean EsAdminLogeado(Request request){
-        if(!request.session().isNew() && request.session().attribute("id") != null){
+    public Boolean EsAdminLogeado(Request request) {
+        if (!request.session().isNew() && request.session().attribute("id") != null) {
             Usuario usuario = this.buscarUsuarioPorID(request.session().attribute("id"));
-            if (usuario.EsAdmin()) return true;}
+            return usuario.EsAdmin();
+        }
         return false;
     }
 
     public ModelAndView pantallaUsuarios(Request request, Response response) {
         Map<String, Object> parametros = new HashMap<>();
-        if (this.EsAdminLogeado(request)){
+        if (this.EsAdminLogeado(request)) {
             List<Usuario> usuarios = this.listarTodos();
             parametros.put("usuarios", usuarios);
             Utilidades.asignarUsuarioSiEstaLogueado(request, parametros);
-            return new ModelAndView(parametros,"usuarios.hbs");
+            return new ModelAndView(parametros, "usuarios.hbs");
         }
-        return new ModelAndView(parametros,"home.hbs");
+        return new ModelAndView(parametros, "home.hbs");
     }
 
     public ModelAndView pantallaModificar(Request request, Response response) {
-        Usuario usuario = this.buscarUsuarioPorID(new Integer(request.params("id")));
+        Usuario usuario = this.buscarUsuarioPorID(Integer.valueOf(request.params("id")));
         List<DescripcionPermiso> permisos = new ArrayList<>();
         Integer i = 0;
         for (Permiso permiso : Permiso.values()) {
             permisos.add(new DescripcionPermiso(i, permiso.descripcionPermiso(permiso)));
             i++;
-          }
+        }
         Map<String, Object> parametros = new HashMap<>();
         parametros.put("usuario", usuario);
         parametros.put("roles", permisos);
+        Utilidades.asignarUsuarioSiEstaLogueado(request, parametros);
         return new ModelAndView(parametros, "usuario.hbs");
     }
 
     public Response modificarUsuario(Request request, Response response) {
-        Usuario usuario = this.buscarUsuarioPorID(new Integer(request.params("id")));
+        Usuario usuario = this.buscarUsuarioPorID(Integer.valueOf(request.params("id")));
         usuario.setUsuario(request.queryParams("usuario"));
         usuario.cambiarContrasenia(request.queryParams("password"));
-        usuario.setPermiso(DescripcionPermiso.getPermisoConInteger(new Integer(request.queryParams("permiso"))));
+        usuario.setPermiso(DescripcionPermiso.getPermisoConInteger(Integer.valueOf(request.queryParams("permiso"))));
         this.modificar(usuario.getId(), usuario.toDTO());
         response.redirect("/usuarios");
         return response;
     }
 }
-
